@@ -1,0 +1,7 @@
+[SubtitleEditor Extension]
+_Name=DCSubtitle
+_Description=DCSubtitle subtitles support.
+Categorie=subtitleformat
+Type=module
+Module=dcsubtitle
+Authors=kitone <kitone at gna dot org>
